--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hejsan alla! Testar bara lite</h1>
+<!DOCTYPE html>
+<html>
+   <head>
+    <link rel="stylesheet" href="styles.css">
+   </head>
+  <body>
+
+    <h1>Hejsan alla! Testar bara lite</h1>
+
+  </body>
+</html>
