--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-   <head>
-    <link rel="stylesheet" href="styles.css">
-   </head>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
   <body>
-
     <h1>Hejsan alla! Testar bara lite</h1>
-
+    <p>Vad skall man skriva här nu då</p>
+    <ul>
+      <li>Test 1</li>
+      <li>Test 2</li>
+      <li>Test 3</li>
+    </ul>
   </body>
 </html>
