Added another line of code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <li>Test 1</li>
       <li>Test 2</li>
       <li>Test 3</li>
+      <li>Test 4</li>
+      <li>Test 5</li>
     </ul>
   </body>
 </html>
